--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="item-container">
           <div class="card">
             <span class="img-container">
-              <img src="/Project/images/cappacino.jpg" />
+              <img src="/tooryanaad-wd/Project/images/cappacino.jpg" />
             </span>
 
             <h2 class="item-title">Cappacino</h2>
@@ -83,7 +83,7 @@
 
           <div class="card">
             <span class="img-container">
-              <img src="/Project/images/mocha.jpg" />
+              <img src="/tooryanaad-wd/Project/images/mocha.jpg" />
             </span>
 
             <h2 class="item-title">Mocha</h2>
@@ -103,7 +103,7 @@
 
           <div class="card">
             <span class="img-container">
-              <img src="/Project/images/latte.jpg" />
+              <img src="/tooryanaad-wd/Project/images/latte.jpg" />
             </span>
 
             <h2 class="item-title">Latte</h2>
@@ -123,7 +123,7 @@
 
           <div class="card">
             <span class="img-container">
-              <img src="/Project/images/cold java.jpg" />
+              <img src="/tooryanaad-wd/Project/images/cold java.jpg" />
             </span>
 
             <h2 class="item-title">Cold Java</h2>
@@ -150,16 +150,16 @@
       <hr />
       <div class="brand-container">
         <span class="brand-img-container">
-          <img class = "brand-img" id="starbucks" src="/Project/images/starbucks.png">
+          <img class = "brand-img" id="starbucks" src="/tooryanaad-wd/Project/images/starbucks.png">
         </span>
         <span class="brand-img-container">
-          <img class = "brand-img" id="nescafe" src="/Project/images/nescafe.png">
+          <img class = "brand-img" id="nescafe" src="/tooryanaad-wd/Project/images/nescafe.png">
         </span>
         <span class="brand-img-container">
-          <img class = "brand-img" id="tim-hortons" src="/Project/images/tim-hortons.png">
+          <img class = "brand-img" id="tim-hortons" src="/tooryanaad-wd/Project/images/tim-hortons.png">
         </span>
         <span class="brand-img-container">
-          <img class = "brand-img" id="dunkin-donuts" src="/Project/images/dunkin-donuts.png">
+          <img class = "brand-img" id="dunkin-donuts" src="/tooryanaad-wd/Project/images/dunkin-donuts.png">
         </span>
       </div>
         </div>
